clusters/hive/apps/magicmirror/k8s-manifests/vscode-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vscode
  namespace: magicmirror
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: magicmirror-vscode.gavriliu.com
      http:
        paths:
          - backend:
              service:
                name: vscode
                port:
                  number: 8443
            path: /
            pathType: Prefix
